--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
     <uses-sdk
         android:minSdkVersion="12"
-        android:targetSdkVersion="17" />
+        android:targetSdkVersion="14" />
 
     <application
         android:allowBackup="true"
@@ -16,6 +16,11 @@
         <activity
             android:name="com.adam.mycreditcards.ui.MainActivity"
             android:theme="@style/Theme.NoTitleBar" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name="com.adam.mycreditcards.ui.AddActivity"
@@ -26,25 +31,12 @@
             android:label="@string/app_name" >
         </activity>
         <activity
-            android:name="com.adam.mycreditcards.ui.LauncherActivity"
-            android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name="com.adam.mycreditcards.ui.CardsActivity_tab"
-            android:label="@string/app_name" >
-        </activity>
-        <activity
-            android:name="com.adam.mycreditcards.ui.CardsActivity_backup"
-            android:label="@string/app_name" >
-        </activity>
-        <activity
             android:name="com.adam.mycreditcards.ui.AboutActivity"
             android:label="@string/title_activity_about" >
+        </activity>
+        <activity
+            android:name="com.adam.mycreditcards.ui.Cards_conf_Activity"
+            android:label="@string/title_activity_cards_conf_" >
         </activity>
     </application>
 
